<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Brian</string>
    <string name="last_name">Zhang</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">Hi! I am a Sophomore majoring in Computer Science in University of Michigan. I am from New Jersey and I would like to become a software engineer. I am interested in android, web, and game development! 🖥️ </string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Watching Anime 🎞️</string>
    <string name="profile_hobby_second_text">🥈 Playing video games 🎮</string>
    <string name="profile_hobby_third_text">🥉 Playing tennis and pickleball 🎾</string>
</resources>